Bug 124112 - Insert drawing object in chart crashes LibreOffice
Summary: Insert drawing object in chart crashes LibreOffice
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha1+
Hardware: x86-64 (AMD64) All
: highest major
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0 target:6.2.3
Keywords: bibisected, bisected, regression
: 124761 (view as bug list)
Depends on:
Blocks: Chart
  Show dependency treegraph
 
Reported: 2019-03-15 22:58 UTC by wpeaton4
Modified: 2019-04-16 07:12 UTC (History)
4 users (show)

See Also:
Crash report or crash signature: ["chart::impl::ShapeUndoElement::getTitle()"]


Attachments
Example file (11.53 KB, application/vnd.oasis.opendocument.spreadsheet)
2019-03-19 17:18 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description wpeaton4 2019-03-15 22:58:05 UTC
If I try to insert a rectangle or text box into a Chart in Calc, LibreOffice crashes immediately.

One potential workaround is to create the drawing object in the worksheet and then paste it into the chart. This almost works. But if I go to edit the chart, it crashes LibreOffice.
Comment 1 wpeaton4 2019-03-15 23:48:59 UTC
Uninstalled 6.2.1.2 completely. Removed residual folders in Program Files\LibreOffice

Installed 6.1.5.2 and this problem does not occur anymore.
Comment 2 wpeaton4 2019-03-17 00:02:43 UTC
Reopened. This is a bug for 6.2.1.2
Comment 3 Xisco Faulí 2019-03-18 20:34:48 UTC
(In reply to wpeaton4 from comment #2)
> Reopened. This is a bug for 6.2.1.2

How do you insert in the shape into the chart ?
Could you please create and attach a screencast showing the steps?
There are various free screencast software available for use, including Camstudio (Windows), Jing (Mac), Simple Screen Recorder (Linux) or screencast-o-matic.com (Web).

I have set the bug's status to 'NEEDINFO'. Please change it back to 'UNCONFIRMED' once the requested screencast is provided.
Comment 4 wpeaton4 2019-03-19 15:35:50 UTC
It might take me a while to get you a screencast. To reproduce is easy, but I've uninstalled 6.2.1.2 on my work Windows machine, and this is such a serious issue that I don't want to reinstall. However, I do have a Windows partition at home that I can boot into and install 6.2.1.2 and screencast software.

To reproduce:

1. In Calc, enable Drawing toolbar visibility (View...Toolbars...Drawing)
2. Type in some data in Calc and create a Chart
3. Activate the Chart for editing (double click)
4. Select any drawing tool from drawing menu
5. Click inside chart to draw rectangle.
6. LibO will crash.

You can also copy a drawing object from a LibO app and paste it into a chart. Once you start interacting with the drawing object (to move, edit, etc.), LibO will crash.
Comment 5 Telesto 2019-03-19 17:18:06 UTC
Created attachment 150103 [details]
Example file
Comment 6 Telesto 2019-03-19 17:20:23 UTC
Repro
Version: 6.3.0.0.alpha0+
Build ID: bbf9b65f91e8136fa1a2e17960944b8720f5d58e
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-03-15_09:56:33
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: threaded

STR
1. Open the attached file
2. Enter the 'empty' chart with a smiley in it by double click
3. Move the smiley a bit
4. Exit the chart by clicking somewhere else in sheet
5. Double click the chart again -> Crash
Comment 7 Xisco Faulí 2019-03-19 17:39:37 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=6be7e2e9dd8027d284f1b00ef6e3b4654eec7d79

author	Noel Grandin <noel.grandin@collabora.co.uk>	2018-08-30 13:54:33 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2018-09-03 08:27:48 +0200
commit 6be7e2e9dd8027d284f1b00ef6e3b4654eec7d79 (patch)
tree d43e18e7ef12d29089f9eb34bbe95a78245261cc
parent dff829e863fd05bedd5bcb713cd80c10fa582932 (diff)
pass SdrUndoAction around by std::unique_ptr
convert the LINK we use here to std::function, since LINK
does not currently handle std::unique_ptr

Bisected with: bibisect-linux64-6.2

Adding Cc: to Noel Grandin
Comment 8 Commit Notification 2019-03-25 12:00:21 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/dec5b1191d18a059b63cf2d66b1ce95703804079%5E%21

tdf#124112 Insert drawing object in chart crashes LibreOffice

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Xisco Faulí 2019-03-27 13:19:23 UTC
--- Comment #9 from Commit Notification 
<libreoffice-comm...@lists.freedesktop.org> ---
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/49e07e06f99e769ee48a71d9d80765f363f5bbb6%5E%21

tdf#124112 Insert drawing object in chart crashes LibreOffice

It will be available in 6.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.

Comment lost during the BZ outage -> https://www.mail-archive.com/libreoffice-bugs@lists.freedesktop.org/msg583738.html
Comment 10 Xisco Faulí 2019-03-27 17:57:51 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: 705558aa455403cd006993f95b5b13981fdb3483
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Noel Grandin, thanks for fixing this issue!!
Comment 11 Xisco Faulí 2019-04-16 07:12:32 UTC
*** Bug 124761 has been marked as a duplicate of this bug. ***