tdf#124112 Insert drawing object in chart crashes LibreOffice

regression from
    commit 6be7e2e9dd8027d284f1b00ef6e3b4654eec7d79
    Date:   Thu Aug 30 13:54:33 2018 +0200
    pass SdrUndoAction around by std::unique_ptr
Looks like previously this memory was just leaked, so fix that and the
crash

Change-Id: I5eb5c104dccd82cef30af533ce1fe8546ced0ea0